# easy_vic_build

./: .gitignore  LICENSE  MANIFEST.in  README.md  conda-requirements.txt  environment.yml  pyproject.toml
docs/: evb_architecture.tif
docs/source/: citation.rst  conf.py  contact.rst  contributing.rst  features.rst  index.rst  installation.rst  license.rst  notes.rst  usage.rst
docs/source/_templates/: module.rst.template
docs/source/api/: easy_vic_build.rst  easy_vic_build.tools.calibrate_func.rst  easy_vic_build.tools.dpc_func.extractData_func.rst  easy_vic_build.tools.dpc_func.rst  easy_vic_build.tools.geo_func.rst  easy_vic_build.tools.hydroanalysis_func.rst  easy_vic_build.tools.mete_func.rst  easy_vic_build.tools.nc_func.rst  easy_vic_build.tools.params_func.rst  easy_vic_build.tools.plot_func.rst  easy_vic_build.tools.rst  easy_vic_build.tools.uh_func.rst  index.rst  modules.rst
easy_vic_build/: __init__.py  build_GlobalParam.py  build_MeteForcing.py  build_MeteForcing_nco.py  build_RVIC_Param.py  build_dpc.py  build_hydroanalysis.py  bulid_Domain.py  bulid_Param.py  calibrate.py  warmup.py
easy_vic_build/arcpy_scripts/: build_flowdirection_arcpy.py
easy_vic_build/data/: NLDAS_Veg_monthly.xlsx  annual_prec_lat.txt  annual_prec_lon.txt  global_param_reference.txt  rvic.convolution.reference.cfg  rvic.parameters.reference.cfg
easy_vic_build/dataPreprocess/: __init__.py  aggregate.py  basin_grid.py  dpc_base.py  dpc_subclass.py  readdataIntoBasin_interface.py  readdataIntoGrids_interface.py  select_basin_shp.py
easy_vic_build/dataPreprocess/ExtractData/: Extract_CAMELS_ForcingDaymet.py  Extract_CONUS_SOIL.py  Extract_ERA5_SM.py  Extract_ERA5_SoilTemperature.py  Extract_GLDAS.py  Extract_GLEAM_E.py  Extract_GlobalSnow_SWE.py  Extract_HWSD.py  Extract_MODIS_BSA.py  Extract_MODIS_LAI.py  Extract_MODIS_NDVI.py  Extract_NLDAS_annual_P.py  Extract_SrtmDEM.py  Extract_TRMM_P.py  Extract_UMDLandCover.py  Extract_UMD_1km.py
easy_vic_build/linux_scripts/: combineYearly.py
easy_vic_build/linux_scripts/other/: formationForcing.nco
easy_vic_build/modified_rvic/rvic/: parameters.py
easy_vic_build/tools/: decoractors.py  utilities.py
easy_vic_build/tools/calibrate_func/: algorithm_NSGAII.py  evaluate_metrics.py  params_set.py  sampling.py
easy_vic_build/tools/dpc_func/: basin_grid_class.py  basin_grid_func.py  dpc_base.py  dpc_func.py  dpc_subclass.py  readdataIntoBasins_interface.py  readdataIntoGrids_interface.py
easy_vic_build/tools/geo_func/: clip.py  create_gdf.py  resample.py  search_grids.py
easy_vic_build/tools/hydroanalysis_func/: create_dem.py  create_flow_distance.py  hydroanalysis_arcpy.py  hydroanalysis_wbw.py
easy_vic_build/tools/nc_func/: mask_nc.py
easy_vic_build/tools/params_func/: GlobalParamParser.py  Scaling_operator.py  TansferFunction.py  createParametersDataset.py  params_set.py  veg_type_attributes_umd_prepare.py
easy_vic_build/tools/plot_func/: plot_func.py
easy_vic_build/tools/uh_func/: create_uh.py
examples/213_6km/BasinMap/: dem_level0.tif  filled_dem.tif  flow_acc.tif  flow_direction.tif  stream_raster.tif  stream_raster_shp.dbf  stream_raster_shp.shp  stream_raster_shp.shx  stream_raster_shp_clip.dbf  stream_raster_shp_clip.shp  stream_raster_shp_clip.shx  stream_vector.dbf  stream_vector.shp  stream_vector.shx
examples/213_6km/DomainFile/: domain.nc
examples/213_6km/GlobalParam/: global_param.txt
examples/213_6km/Hydroanalysis/: dem_level1.tif  flow_acc.tif  flow_direction.tif  flow_distance.tif
scripts/arcpy_scripts/: build_flowdirection_arcpy.py
scripts/linux_scripts/: combineYearly.py
src/easy_vic_build/: Evb_dir_class.py  Logger.py  __init__.py  build_GlobalParam.py  build_MeteForcing.py  build_MeteForcing_nco.py  build_RVIC_Param.py  build_dpc.py  build_hydroanalysis.py  bulid_Domain.py  bulid_Param.py  calibrate.py  warmup.py
tests/: test_build_Domain.py  test_build_GlobalParam.py  test_build_MeteForcing.py  test_build_MeteForcing_nco.py  test_build_Param.py  test_build_RVIC_Param.py  test_build_VIC.py  test_build_dpc.py  test_build_hydroanalysis.py  test_calibrate.py  test_install.py  test_plot_Basin_map.py  test_plot_VIC_result.py
(+113 files in other folders)
