[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_vic_build"
version = "1.0.0"
description = "An open-source Python package for VIC model deployment."
authors = [
    { name = "Xudong Zheng", email = "z786909151@163.com, zhengxd@sehemodel.club" }
]

readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/username/mypackage"

[tool.setuptools.packages.find]
where = ["easy_vic_build"]

[tool.setuptools.package-data]
mypackage = ["data/*"]