[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_vic_build"
version = "1.0.0"
description = "An open-source Python package for VIC model deployment."
authors = [
    { name = "Xudong Zheng", email = "z786909151@163.com, zhengxd@sehemodel.club" }
]

readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.2",
    "pandas>=1.4.3",
    "geopandas>=0.10.1",
    "matplotlib>=3.9.2",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.2",
    "xarray>=2023.6.0",
    "requests>=2.32.3",
    "shapely>=2.0.6",
    "rasterio>=1.4.1",
    "folium>=0.18.0",
    "cartopy>=0.23.0",
    "netcdf4>=1.7.1",
    "h5py>=3.10.0",
    "pyproj>=3.6.1",
    "pyogrio>=0.10.0",
    "whitebox-workflows>=1.3.3",
    "rvic>=1.1.1",
    "nco>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/username/mypackage"

[tool.setuptools.packages.find]
where = ["easy_vic_build"]

[tool.setuptools.package-data]
mypackage = ["data/*"]