[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_vic_build"
version = "1.0.0"
description = "An open-source Python package for VIC model deployment."
authors = [
    { name = "Xudong Zheng", email = "z786909151@163.com, zhengxd@sehemodel.club" }
]

readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Basic computation and visualization
    "numpy>=1.21.2",  # Arrays and operations
    "pandas>=1.4.3",  # Data frames and operations
    "matplotlib>=3.9.2",  # Plotting
    "scipy>=1.13.1",  # Scientific computing
    "tqdm>=4.66.5",  # Progress bar

    # Geospatial data processing
    "geopandas>=0.10.1",  # Geospatial data processing and geometric operations
    "netcdf4>=1.7.1",  # Processing NetCDF format data
    "xarray>=2023.6.0",  # Processing multidimensional arrays and NetCDF format data
    "rasterio>=1.4.1",  # Processing gridded raster datasets
    "folium>=0.18.0",  # Interactive maps
    "cartopy>=0.23.0",  # Spatial plotting and spatial reference
    "shapely>=2.0.6",  # Geometric operations
    "pyproj>=3.6.1",  # Coordinate transformations
    "pyogrio>=0.10.0",  # Geospatial data I/O

    # Hydrological analysis
    "whitebox-workflows>=1.3.3",  # Hydrological analysis
    "rvic>=1.1.1",  # Routing model

    # Optimization
    "deap>=1.4.1",  # Evolutionary computation framework

    # Optional features
    "nco>=1.1.2",  # NetCDF Operators
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/username/mypackage"

[tool.setuptools.packages.find]
where = ["easy_vic_build"]

[tool.setuptools.package-data]
mypackage = ["data/*"]